--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,10 @@
-* {
+body {
     font-family: 'Press Start 2P', cursive;
+    cursor: url("../assets//cursor/yugicursor.png"), default;
+}
+
+img:hover, button:hover, a:hover {
+    cursor: url("../assets//cursor/yamiyugicursorGLOW.png"), default;
 }
 
 .bg-video {
@@ -68,7 +73,8 @@
     align-items: center;
     justify-content: space-between;
     height: 6rem;
-    /* width: 100%; */
+    width: 24vw;
+    
 }
 
 #card-name {
@@ -87,10 +93,11 @@
     padding: 0.3rem;
 }
 
-.card-versus__container {
-    margin-top: 5rem;
+.card-versus__container {    
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top: 0.1rem;
     height: 300px;
 }
@@ -110,7 +117,7 @@
 }
 
 .card-box {
-    height: 9rem;
+    height: 20rem;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -119,11 +126,13 @@
 }
 
 
-.card-enfield {
+.card-infield {
     height: 11.2rem;
     width: 8rem;
+    border: 1px solid #fff;
     border-radius: 8px;
 }
+
 
 .card {
     transition: transform 0.2s;
